--- a/stylemedia.css
+++ b/stylemedia.css
@@ -55,6 +55,17 @@
         padding: 0 1rem;
         margin-left: 4rem;
       }
+      .boton1:hover{
+        font-family: 'IBM Plex Mono';
+       font-size: 18px;
+       color: #FFFFFF;
+       border: #00F3BB;
+       letter-spacing: 0;
+       text-align: center;
+       line-height: 24px;
+       cursor: pointer;
+        background-image: linear-gradient(225deg, #0000FE 0%, #00F0B8 100%);
+       }
       /*BLOQUE EPISODIOS*/                                                            /*BLOQUE EPISODIOS*/
 
       .contenedorepisodios{
